backend/error_v2.txt
file:///C:/Users/lenovo/fauzan/mesin_cuci_store/backend/src/controllers/userController.js:3
import { AppError } from '../utils/appError.js';
         ^^^^^^^^
SyntaxError: The requested module '../utils/appError.js' does not provide an export named 'AppError'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.12.0
